# python_ai_backend_developer

./: README.md  read.md
Fake_Or_Natty/: ANUNCIO.md  README.md
POO/: 01_poo.py  03_heranca_multipla.py  04_encapsulamento.py  05_propriedade_exemplo.py  06_propriedade_pessoa.py  08_atributo_classe_instancia.py  09_metodos_classe_estatico.py  heranca_simples.py
POO/02_decoradores_iteradores_geradores/: 7_geradores.py  file_iterator.py  large.txt
POO/03_data_hora/: 1_datetime.py  2_timedelta.py
POO/04_manipulacao_arquivos/: 1_operacao_leitura.py  2_operacao_escrita.py  3_os_shutil.py  6_csv.py
POO/05_gerenciamento_pacotes/: pyproject.toml
banco_dados/: 01_dbapi.py  meu_banco.sqlite
dominando_python/: tipos_operadores.py
dominando_python/conjuntos/: 07_issubset.py  09_isdisjoint.py
dominando_python/desafio_projeto/: sistema_bancario_poo.py
dominando_python/dicionarios/: 00_declarando_dicionarios.py  01_acessando_dados.py  02_dicionarios_aninhados.py  03_iterando_dicionarios.py  04_clear.py  05_copy.py  07_get.py  08_items.py  09_keys.py  10_pop.py  11_popitem.py  12_setdefault.py  13_update.py  14_values.py  15_in.py  16_del.py
dominando_python/dominando_strings/: fatiamento_string.py  interpolacao_variaveis.py  metodos_uteis_strings.py  multiplas_linhas.py
dominando_python/estruturas_condicionais_repeticao/: estruturas_condicionais.py  estruturas_repeticao.py
dominando_python/funcoes/: 00_primeira_funcao.py  01_retorno_da_funcao.py  03_args_kwargs.py  06_objetos_de_primeira_classe.py
dominando_python/listas/: 05_iterar_listas.py  13_pop.py  (+1 more)
(+3 files in other folders)
